<resources>
    <string name="app_name">Panic Button</string>
    <string name="app_slogan">Stay safe.</string>
    <string name="about_us">Technology is advancing at the best of its pace. Every sector
        of our lives is touched by its impact, but not the life itself. This is our little
        step towards saving lives.\nPanic Button is an emergency first aid application that is
        capable of providing the latest first-aid information, treatment, procedures and
        instructions. Hence providing relief in times of disaster or emergencies. This is an
        offline service that can be accessed from anywhere and by anyone.</string>
    <string name="app_introduction_pg1_title">Welcome to Panic Button</string>
    <string name="app_introduction_pg1_desc">An initiative towards saving lives</string>

    <string name="app_introduction_pg2_desc">Latest First-Aid information, treatment and
        all other necessities</string>

    <string name="app_introduction_pg3_desc">Find First-Aid for various medical issues</string>
    <string name="app_introduction_pg4_desc">Previously set Emergency Contacts can be
        accessed</string>
    <string name="app_introduction_pg5_desc">Nearby hospitals can be reached in time</string>
    <string name="app_introduction_pg6_desc">Access from Lock Screen itself</string>
    <string name="app_introduction_permissions_title">Permit us to help you</string>
    <string name="app_introduction_permissions_desc">This app requires to access your
        Contacts, GPS, Location, etc</string>
    <string name="loading">Loading&#8230;</string>

    <!-- OfflineActivity -->
    <string name="seems_like_ur_mobile_data_and_wifi_are_turned_off_please_turn_it_on">Seems like
        ur mobile data and wifi are turned off. Please turn it on.</string>
    <string name="offline_image">Offline Image</string>
    <string name="u_r_currently_offline">U r currently Offline!</string>
    <string name="check_now">Check Now</string>
    <string name="there_is_some_problem_with_your_internet_connection_try_again_later">There is
        some problem with your internet connection. Try again later.</string>

    <!-- SignInActivity -->
    <string name="welcome">Welcome</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="password">Password</string>
    <string name="sign_in_cancelled">Sign in cancelled.</string>

    <!-- temporary strings -->
    <string name="welcome_sample_name">Welcome, Sample Name!</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="providers_used">Providers used:</string>
    <string name="none">none</string>
    <string name="no_email">No email</string>
    <string name="no_display_name">No display name</string>
    <string name="panic_button_activated">Panic button activated.</string>
    <string name="panic_button_stopped">Panic button stopped.</string>
    <string name="sample_name">Lorem Ipsum</string>\
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
        feugiat nunc sem. Ut ornare est eget ultricies posuere. Nulla ut rhoncus purus. Phasellus
        id fringilla turpis. Aliquam quis eros orci. Vivamus lacus ligula, rutrum semper nulla
        in, aliquam semper quam. Proin id sem sed turpis dapibus aliquet bibendum vitae ipsum.
        Sed ultricies efficitur cursus. Aenean at nibh scelerisque erat consequat eget eleifend
        dui.</string>
    <string name="sample_small_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="sample_ice_contact">Sample ICE Contact</string>

    <string name="sample_age_gender">22, Male</string>
    <string name="sample_address">10, Larkana Nagar,\nManik Bagh Road,\nIndore M.P. India</string>
    <string name="sample_blood_group">O+</string>

    <!-- ImageView Descriptions -->
    <string name="emergency_button">Emergency Button</string>
    <string name="cancel">Cancel</string>
    <string name="home_icon">Home Icon</string>
    <string name="blood_icon">Blood Icon</string>
    <string name="medical_notes_icon">Medicals Notes Icon</string>
    <string name="contact_dp">Contact Display Picture</string>

    <!-- layout title -->
    <string name="first_aid">First Aid</string>
    <string name="profile">Profile</string>
    <string name="ice_contacts">Emergency Contacts</string>
    <string name="emergency_information">Emergency Information</string>

    <!-- profile layout -->
    <string name="details">Details</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="medical_notes">Medical Notes</string>
    <string name="unknown">Unknown</string>
    <string name="_1">1</string>
    <string name="step_picture">Step Picture</string>
    <string name="back">Back</string>
    <string name="close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emegency_image">Emegency Image</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="navigate_home">Navigate Home</string>
    <string name="your_current_location">Your Current Location:</string>
    <string name="location_not_emabled">Location not enabled!</string>
    <string name="please_enable_gps">Please enable GPS!</string>
    <string name="lat">Lat:</string>
    <string name="lng">Lng:</string>
    <string name="last_known_location_not_available_with_the_system">Last known location not
        available with the system!</string>
    <string name="address_not_found">Address not found!</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="account">Account</string>
    <string name="linkedAccounts">Linked Accounts</string>
    <string name="developers">Developers</string>
    <string name="openSourceLibraries">Open Source Libraries</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="LED">LED</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="instructions">Instructions</string>
    <string name="setup_emergency_contacts">Setup Emergency Contacts</string>
    <string name="emergency_profile">Setup Emergency Information</string>

    <!-- Developer's Details -->
    <string name="medi_caps_institute_of_science_amp_technology_indore">Medi-Caps Institute of
        Science &amp; Technology, Indore</string>
    <string name="arshita_jain">Arshita Jain</string>
    <string name="arshitajain12_gmail_com"><u>arshitajain12@gmail.com</u></string>
    <string name="ayushi_chaturvedi">Ayushi Chaturvedi</string>
    <string name="chaturvedi_ayushi28_gmail_com"><u>chaturvedi.ayushi28@gmail.com</u></string>
    <string name="chirag_bhatia">Chirag Bhatia</string>
    <string name="chiragbhatia94_gmail_com"><u>chiragbhatia94@gmail.com</u></string>
    <string name="hardik_dixit">Hardik Dixit</string>
    <string name="hardikdixit187_gmail_com"><u>hardikdixit187@gmail.com</u></string>
    <string name="app_company_name">Ur Hive</string>
    <string name="app_company_email">urhive.com@gmail.com</string>
    <string name="app_website">https://chiragbhatia94.github.io/PanicButton/</string>
    <string name="app_playstore_link">com.urhive.panicbutton</string>
    <string name="developer_github_username">chiragbhatia94</string>
    <string name="regarding_panic_button">Regarding Panic Button</string>
    <string name="send_email">Send Email</string>

    <string name="info">Info</string>
    <string name="contacts">Contacts</string>
    <string name="nearby_hospital">Nearby Hospital</string>
    <string name="screen_overlay_permission_required">Screen Overlay Permission Required</string>
    <string
        name="panic_button_requires_screen_overlay_permission_for_enabling_application_on_lock_screen">
        Panic button requires screen overlay permission for enabling application on lock screen!
    </string>
    <string name="draw_overlay_app_permission_title">Enable draw over other apps</string>
    <string name="draw_overlay_app_permission_desc">Panic button requires this permission to
        enable the panic button over the lock screen.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="sign_in_to_let_us_gather_your_information_for_the_panic_button">Sign in to let
        us gather your information for the panic button.</string>
    <string name="sign_in">Sign in</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="show_panic_button_on_lock_screen">Show panic button on lock screen</string>
    <string name="edit">Edit</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="click_on_the_list_item_you_want_to_change">Click on the list item you want to
        change!</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="change">Change</string>
    <string name="okay">Okay</string>
    <string name="enter_name">Enter Name</string>
    <string name="age_gender">Age, Gender</string>
    <string name="your_name">Your Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="address_hint">Your address here</string>
    <string name="medical_notes_hint">Your medical notes</string>
    <string name="select_blood_group">Select ur blood group</string>
    <string name="choose">Choose</string>
    <string name="there_is_some_problem_try_again_later_check_for_permissions">There is some
        problem. Try again later. Check for permissions.</string>
    <string name="there_is_some_problem_try_again_later">There is some problem. Try again later
        .</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="unspecified">Unspecified</string>
    <string name="add_contact">Add contact</string>

    <string-array name="blood_groups">
        <item>@string/unspecified</item>
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>
</resources>
