<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_aid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/details"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <RelativeLayout
            android:id="@+id/homeRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:minHeight="72dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="27dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/home_icon"
                android:src="@drawable/ic_home_black_24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/home_icon"
                android:layout_toRightOf="@id/home_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addressTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/setAddressTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_address"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bloodGroupRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:minHeight="72dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/drop_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="27dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/blood_icon"
                android:src="@drawable/ic_water_drop_24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/drop_icon"
                android:layout_toRightOf="@id/drop_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drop_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/blood_group_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_blood_group"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/medicalNotesRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:minHeight="72dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/notes_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="27dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="27dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/medical_notes_icon"
                android:src="@drawable/ic_assignment_black_24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/notes_icon"
                android:layout_toRightOf="@id/notes_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/medicalNotesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_notes"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/setMedicalNotesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/tempBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"/>
    </LinearLayout>
</ScrollView>