<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contactRL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:minHeight="72dp"
    android:paddingBottom="4dp"
    android:paddingTop="4dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contactDPIV"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="27dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/contact_dp"
        app:srcCompat="@drawable/ic_person_black_24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/contactDPIV"
        android:layout_toRightOf="@id/contactDPIV"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_ice_contact"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/contactNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="15sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/deleteContactIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="27dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/delete_contact"
        android:padding="4dp"
        android:src="@drawable/places_ic_clear"
        android:tint="@color/black"
        android:visibility="gone"/>

</RelativeLayout>